--- a/fonts/d5ce8944c0126781e56ee1e409f8e5d8.css
+++ b/fonts/d5ce8944c0126781e56ee1e409f8e5d8.css
@@ -3,7 +3,7 @@
   font-family: 'Heebo';
   font-style: normal;
   font-weight: 400;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/heebo/NGS6v5_NC0k9P9H0TbFzsQ.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/heebo/NGS6v5_NC0k9P9H0TbFzsQ.woff2) format('woff2');
   unicode-range: U+0590-05FF, U+200C-2010, U+20AA, U+25CC, U+FB1D-FB4F;
 }
 /* latin */
@@ -11,7 +11,7 @@
   font-family: 'Heebo';
   font-style: normal;
   font-weight: 400;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/heebo/NGS6v5_NC0k9P9H2TbE.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/heebo/NGS6v5_NC0k9P9H2TbE.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* hebrew */
@@ -19,7 +19,7 @@
   font-family: 'Heebo';
   font-style: normal;
   font-weight: 700;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/heebo/NGS6v5_NC0k9P9H0TbFzsQ.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/heebo/NGS6v5_NC0k9P9H0TbFzsQ.woff2) format('woff2');
   unicode-range: U+0590-05FF, U+200C-2010, U+20AA, U+25CC, U+FB1D-FB4F;
 }
 /* latin */
@@ -27,7 +27,7 @@
   font-family: 'Heebo';
   font-style: normal;
   font-weight: 700;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/heebo/NGS6v5_NC0k9P9H2TbE.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/heebo/NGS6v5_NC0k9P9H2TbE.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* vietnamese */
@@ -35,7 +35,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 200;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNJfJ7Cww.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNJfJ7Cww.woff2) format('woff2');
   unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -43,7 +43,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 200;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNIfJ7Cww.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNIfJ7Cww.woff2) format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -51,7 +51,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 200;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNGfJ4.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNGfJ4.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* vietnamese */
@@ -59,7 +59,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 300;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNJfJ7Cww.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNJfJ7Cww.woff2) format('woff2');
   unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -67,7 +67,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 300;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNIfJ7Cww.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNIfJ7Cww.woff2) format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -75,7 +75,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 300;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNGfJ4.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNGfJ4.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* vietnamese */
@@ -83,7 +83,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 400;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNJfJ7Cww.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNJfJ7Cww.woff2) format('woff2');
   unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -91,7 +91,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 400;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNIfJ7Cww.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNIfJ7Cww.woff2) format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -99,7 +99,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 400;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNGfJ4.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNGfJ4.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* vietnamese */
@@ -107,7 +107,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 500;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNJfJ7Cww.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNJfJ7Cww.woff2) format('woff2');
   unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -115,7 +115,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 500;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNIfJ7Cww.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNIfJ7Cww.woff2) format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -123,7 +123,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 500;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNGfJ4.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNGfJ4.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* vietnamese */
@@ -131,7 +131,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 600;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNJfJ7Cww.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNJfJ7Cww.woff2) format('woff2');
   unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -139,7 +139,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 600;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNIfJ7Cww.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNIfJ7Cww.woff2) format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -147,7 +147,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 600;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNGfJ4.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNGfJ4.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* vietnamese */
@@ -155,7 +155,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 700;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNJfJ7Cww.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNJfJ7Cww.woff2) format('woff2');
   unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -163,7 +163,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 700;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNIfJ7Cww.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNIfJ7Cww.woff2) format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -171,7 +171,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 700;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNGfJ4.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNGfJ4.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* vietnamese */
@@ -179,7 +179,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 800;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNJfJ7Cww.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNJfJ7Cww.woff2) format('woff2');
   unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -187,7 +187,7 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 800;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNIfJ7Cww.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNIfJ7Cww.woff2) format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -195,6 +195,6 @@
   font-family: 'Public Sans';
   font-style: normal;
   font-weight: 800;
-  src: url(http://ottawa-premier-ball-hockey-league.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNGfJ4.woff2) format('woff2');
+  src: url(http://opbhl.local/wp-content/fonts/public-sans/ijwRs572Xtc6ZYQws9YVwnNGfJ4.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
